change btn link from data and information to link to DataController Scene

--- a/BrittneyMorales_CSP/View/Base.lproj/Main.storyboard
+++ b/BrittneyMorales_CSP/View/Base.lproj/Main.storyboard
@@ -50,7 +50,7 @@
                                 <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="16"/>
                                 <state key="normal" title="Data and Information"/>
                                 <connections>
-                                    <segue destination="c2U-Se-1rk" kind="show" id="I17-2B-yPt"/>
+                                    <segue destination="AFN-al-5Xt" kind="show" id="dSF-cI-WmL"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tck-1m-JVM">
